<resources>
    <string name="app_name">Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="log_in">Sign in</string>
    <string name="menu_home">Home</string>
    <string name="menu_admin">Admin</string>
    <string name="submit_button">Submit</string>
    <string name="name">Name</string>
    <string name="adminName">admin</string>
    <string name="adminPassword">admin</string>
    <string name="grid">Grid/0–100</string>
    <string name="surname">Surname</string>
    <string name="grid_new">Minimum Grid/0–100</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faculties">Faculties</string>
    <string name="students">Students</string>
    <string name="see_result">See Result</string>
    <string name="grid_from">Grid(From)</string>
    <string name="grid_to">Grid(To)</string>
    <string name="search">Search by</string>
    <string name="choose_university">Choose University</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="add">Add</string>
    <string name="choose_faculty">Choose Faculty</string>
    <string-array name="search_by">search by
        <item> Name</item>
        <item> University</item>
        <item> Faculty</item>
    </string-array>
</resources>