<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <RelativeLayout
        android:id="@+id/homeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home">


        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="75dp"
            android:backgroundTint="@color/orange_500"

            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/user_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/orange_500"
            android:ems="10"
            android:hint="@string/surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText

            android:id="@+id/user_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_surname"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_toStartOf="@+id/submit_button"
            android:backgroundTint="@color/orange_500"
            android:ems="10"
            android:hint="@string/grid"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_surname"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"

            android:backgroundTint="@color/orange_500"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>