<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.Registration">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/university"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="75dp">

        <AutoCompleteTextView
            android:id="@+id/university_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_university"
            android:inputType="none"
            tools:ignore="LabelFor,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/faculty_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_below="@+id/university"
        android:layout_marginTop="50dp">

        <AutoCompleteTextView
            android:id="@+id/faculty_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_faculty"
            android:inputType="none"


            tools:ignore="LabelFor,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:textColor="@color/white"
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/faculty_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/submit_button" />
</RelativeLayout>