<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminFragment">


    <RelativeLayout

        android:id="@+id/admin_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/admin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/orange_500"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/admin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/admin_name"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/orange_500"
            android:ems="10"
            android:hint="@string/password"

            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <Button
            android:id="@+id/logIn_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/orange_500"
            android:text="@string/log_in"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>